+ conseq4j version bump